Fix scrollbars appears at incorrect container in roles and groups

--- a/portal/src/graphql/adminapi/RolesScreen.module.css
+++ b/portal/src/graphql/adminapi/RolesScreen.module.css
@@ -16,5 +16,5 @@
 }
 
 .list {
-  @apply flex-1;
+  @apply flex-1 min-h-0;
 }
